--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,20 @@
   "name": "MIS",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "sass/style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "sass/materialize.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "sass"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -17,7 +28,155 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "sass/ghpages-materialize.scss",
+      "imports": [
+        "sass/materialize.scss",
+        "sass/_style.scss",
+        "sass/components/_prefixer.scss",
+        "sass/components/_mixins.scss",
+        "sass/components/_color.scss",
+        "sass/components/_variables.scss",
+        "sass/components/_normalize.scss",
+        "sass/components/_global.scss",
+        "sass/components/_badges.scss",
+        "sass/components/_icons-material-design.scss",
+        "sass/components/_grid.scss",
+        "sass/components/_navbar.scss",
+        "sass/components/_roboto.scss",
+        "sass/components/_typography.scss",
+        "sass/components/_cards.scss",
+        "sass/components/_toast.scss",
+        "sass/components/_tabs.scss",
+        "sass/components/_tooltip.scss",
+        "sass/components/_buttons.scss",
+        "sass/components/_dropdown.scss",
+        "sass/components/_waves.scss",
+        "sass/components/_modal.scss",
+        "sass/components/_collapsible.scss",
+        "sass/components/_chips.scss",
+        "sass/components/_materialbox.scss",
+        "sass/components/forms/_forms.scss",
+        "sass/components/_table_of_contents.scss",
+        "sass/components/_sideNav.scss",
+        "sass/components/_preloader.scss",
+        "sass/components/_slider.scss",
+        "sass/components/_carousel.scss",
+        "sass/components/date_picker/_default.scss",
+        "sass/components/date_picker/_default.date.scss",
+        "sass/components/date_picker/_default.time.scss",
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "sass/materialize.scss",
+      "imports": [
+        "sass/components/_prefixer.scss",
+        "sass/components/_mixins.scss",
+        "sass/components/_color.scss",
+        "sass/components/_variables.scss",
+        "sass/components/_normalize.scss",
+        "sass/components/_global.scss",
+        "sass/components/_badges.scss",
+        "sass/components/_icons-material-design.scss",
+        "sass/components/_grid.scss",
+        "sass/components/_navbar.scss",
+        "sass/components/_roboto.scss",
+        "sass/components/_typography.scss",
+        "sass/components/_cards.scss",
+        "sass/components/_toast.scss",
+        "sass/components/_tabs.scss",
+        "sass/components/_tooltip.scss",
+        "sass/components/_buttons.scss",
+        "sass/components/_dropdown.scss",
+        "sass/components/_waves.scss",
+        "sass/components/_modal.scss",
+        "sass/components/_collapsible.scss",
+        "sass/components/_chips.scss",
+        "sass/components/_materialbox.scss",
+        "sass/components/forms/_forms.scss",
+        "sass/components/_table_of_contents.scss",
+        "sass/components/_sideNav.scss",
+        "sass/components/_preloader.scss",
+        "sass/components/_slider.scss",
+        "sass/components/_carousel.scss",
+        "sass/components/date_picker/_default.scss",
+        "sass/components/date_picker/_default.date.scss",
+        "sass/components/date_picker/_default.time.scss",
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "sass/components/forms/_forms.scss",
+      "imports": [
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "sass/app.scss",
+      "imports": [
+        "sass/materialize.scss",
+        "sass/components/_prefixer.scss",
+        "sass/components/_mixins.scss",
+        "sass/components/_color.scss",
+        "sass/components/_variables.scss",
+        "sass/components/_normalize.scss",
+        "sass/components/_global.scss",
+        "sass/components/_badges.scss",
+        "sass/components/_icons-material-design.scss",
+        "sass/components/_grid.scss",
+        "sass/components/_navbar.scss",
+        "sass/components/_roboto.scss",
+        "sass/components/_typography.scss",
+        "sass/components/_cards.scss",
+        "sass/components/_toast.scss",
+        "sass/components/_tabs.scss",
+        "sass/components/_tooltip.scss",
+        "sass/components/_buttons.scss",
+        "sass/components/_dropdown.scss",
+        "sass/components/_waves.scss",
+        "sass/components/_modal.scss",
+        "sass/components/_collapsible.scss",
+        "sass/components/_chips.scss",
+        "sass/components/_materialbox.scss",
+        "sass/components/forms/_forms.scss",
+        "sass/components/_table_of_contents.scss",
+        "sass/components/_sideNav.scss",
+        "sass/components/_preloader.scss",
+        "sass/components/_slider.scss",
+        "sass/components/_carousel.scss",
+        "sass/components/date_picker/_default.scss",
+        "sass/components/date_picker/_default.date.scss",
+        "sass/components/date_picker/_default.time.scss",
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
@@ -149,7 +308,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"cssnext\",\"minify-css\"],\"sourceMap\":true,\"compiler-minify-css\":{\"enabled\":true}}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
