revamp of HMS Boilerplate

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "MIS",
+  "name": "HMS",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -147,7 +147,7 @@
     "enable": true,
     "proxy": {
       "enable": true,
-      "url": "http://localhost/GitHub/MIS/"
+      "url": "http://localhost/labs/HMS/"
     }
   },
   "browser-sync": {
