--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,11 +14,15 @@
     {
       "path": "js/script.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "js/script-dist.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "js"
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -69,6 +73,108 @@
         "sass/components/date_picker/_default.scss",
         "sass/components/date_picker/_default.date.scss",
         "sass/components/date_picker/_default.time.scss",
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "sass/ghpages-materialize.scss",
+      "imports": [
+        "sass/materialize.scss",
+        "sass/_style.scss",
+        "sass/components/_prefixer.scss",
+        "sass/components/_mixins.scss",
+        "sass/components/_color.scss",
+        "sass/components/_variables.scss",
+        "sass/components/_normalize.scss",
+        "sass/components/_global.scss",
+        "sass/components/_badges.scss",
+        "sass/components/_icons-material-design.scss",
+        "sass/components/_grid.scss",
+        "sass/components/_navbar.scss",
+        "sass/components/_roboto.scss",
+        "sass/components/_typography.scss",
+        "sass/components/_cards.scss",
+        "sass/components/_toast.scss",
+        "sass/components/_tabs.scss",
+        "sass/components/_tooltip.scss",
+        "sass/components/_buttons.scss",
+        "sass/components/_dropdown.scss",
+        "sass/components/_waves.scss",
+        "sass/components/_modal.scss",
+        "sass/components/_collapsible.scss",
+        "sass/components/_chips.scss",
+        "sass/components/_materialbox.scss",
+        "sass/components/forms/_forms.scss",
+        "sass/components/_table_of_contents.scss",
+        "sass/components/_sideNav.scss",
+        "sass/components/_preloader.scss",
+        "sass/components/_slider.scss",
+        "sass/components/_carousel.scss",
+        "sass/components/date_picker/_default.scss",
+        "sass/components/date_picker/_default.date.scss",
+        "sass/components/date_picker/_default.time.scss",
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "sass/materialize.scss",
+      "imports": [
+        "sass/components/_prefixer.scss",
+        "sass/components/_mixins.scss",
+        "sass/components/_color.scss",
+        "sass/components/_variables.scss",
+        "sass/components/_normalize.scss",
+        "sass/components/_global.scss",
+        "sass/components/_badges.scss",
+        "sass/components/_icons-material-design.scss",
+        "sass/components/_grid.scss",
+        "sass/components/_navbar.scss",
+        "sass/components/_roboto.scss",
+        "sass/components/_typography.scss",
+        "sass/components/_cards.scss",
+        "sass/components/_toast.scss",
+        "sass/components/_tabs.scss",
+        "sass/components/_tooltip.scss",
+        "sass/components/_buttons.scss",
+        "sass/components/_dropdown.scss",
+        "sass/components/_waves.scss",
+        "sass/components/_modal.scss",
+        "sass/components/_collapsible.scss",
+        "sass/components/_chips.scss",
+        "sass/components/_materialbox.scss",
+        "sass/components/forms/_forms.scss",
+        "sass/components/_table_of_contents.scss",
+        "sass/components/_sideNav.scss",
+        "sass/components/_preloader.scss",
+        "sass/components/_slider.scss",
+        "sass/components/_carousel.scss",
+        "sass/components/date_picker/_default.scss",
+        "sass/components/date_picker/_default.date.scss",
+        "sass/components/date_picker/_default.time.scss",
+        "sass/components/forms/_input-fields.scss",
+        "sass/components/forms/_radio-buttons.scss",
+        "sass/components/forms/_checkboxes.scss",
+        "sass/components/forms/_switches.scss",
+        "sass/components/forms/_select.scss",
+        "sass/components/forms/_file-input.scss",
+        "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "sass/components/forms/_forms.scss",
+      "imports": [
         "sass/components/forms/_input-fields.scss",
         "sass/components/forms/_radio-buttons.scss",
         "sass/components/forms/_checkboxes.scss",
