--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,8 +27,9 @@
   "fileTree": {
     "expandedDirs": [
       "sass",
+      "public/js",
       "public",
-      "public/js"
+      "public/sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -188,6 +189,51 @@
         "sass/components/forms/_select.scss",
         "sass/components/forms/_file-input.scss",
         "sass/components/forms/_range.scss"
+      ]
+    },
+    {
+      "path": "public/sass/app.scss",
+      "imports": [
+        "public/sass/materialize.scss",
+        "public/sass/components/_prefixer.scss",
+        "public/sass/components/_mixins.scss",
+        "public/sass/components/_color.scss",
+        "public/sass/components/_variables.scss",
+        "public/sass/components/_normalize.scss",
+        "public/sass/components/_global.scss",
+        "public/sass/components/_badges.scss",
+        "public/sass/components/_icons-material-design.scss",
+        "public/sass/components/_grid.scss",
+        "public/sass/components/_navbar.scss",
+        "public/sass/components/_roboto.scss",
+        "public/sass/components/_typography.scss",
+        "public/sass/components/_cards.scss",
+        "public/sass/components/_toast.scss",
+        "public/sass/components/_tabs.scss",
+        "public/sass/components/_tooltip.scss",
+        "public/sass/components/_buttons.scss",
+        "public/sass/components/_dropdown.scss",
+        "public/sass/components/_waves.scss",
+        "public/sass/components/_modal.scss",
+        "public/sass/components/_collapsible.scss",
+        "public/sass/components/_chips.scss",
+        "public/sass/components/_materialbox.scss",
+        "public/sass/components/forms/_forms.scss",
+        "public/sass/components/_table_of_contents.scss",
+        "public/sass/components/_sideNav.scss",
+        "public/sass/components/_preloader.scss",
+        "public/sass/components/_slider.scss",
+        "public/sass/components/_carousel.scss",
+        "public/sass/components/date_picker/_default.scss",
+        "public/sass/components/date_picker/_default.date.scss",
+        "public/sass/components/date_picker/_default.time.scss",
+        "public/sass/components/forms/_input-fields.scss",
+        "public/sass/components/forms/_radio-buttons.scss",
+        "public/sass/components/forms/_checkboxes.scss",
+        "public/sass/components/forms/_switches.scss",
+        "public/sass/components/forms/_select.scss",
+        "public/sass/components/forms/_file-input.scss",
+        "public/sass/components/forms/_range.scss"
       ]
     }
   ],
