--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
       ]
     },
   "require": {
-    "nesbot/carbon": "~1.18"
+    "nesbot/carbon": "~1.18",
+    "ashleydawson/simple-pagination": "~1.0"
   },
     "config": {
         "optimize-autoloader": true
