Revamping of Admin Views And Module

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
   "require": {
     "nesbot/carbon": "~1.18",
     "ashleydawson/simple-pagination": "~1.0",
-    "jasongrimes/paginator": "~1.0"
+    "jasongrimes/paginator": "~1.0",
+    "catfan/Medoo": "^1.4"
   },
     "config": {
         "optimize-autoloader": true
