Addition of Create and View Admin Modules

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "nesbot/carbon": "~1.18",
     "ashleydawson/simple-pagination": "~1.0",
     "jasongrimes/paginator": "~1.0",
-    "catfan/Medoo": "^1.4"
+    "catfan/Medoo": "^1.4",
+    "phpmailer/phpmailer": "^5.2"
   },
     "config": {
         "optimize-autoloader": true
